# replimap-mono

./: .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AUDIT_REPORT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  DEPLOY-LICENSE-SIGNING.md  DEPLOYMENT.md  Dockerfile  E2E_DEV_VALIDATION_LOG.md  IAM_POLICY.md  INVOICE_ORDERING_BACKFILL_FIX_LOG.md  INVOICE_SUBSCRIPTION_FIELD_FIX_LOG.md  LICENSE  MANIFEST.in  Makefile  PAYMENT_HARDENING_LOG.md  PROD_DEPLOYMENT_CHECKLIST.md  PROD_E2E_SMOKE_TEST_LOG.md  PROVISION_COMMUNITY_AUTH_FIX_LOG.md  README.md  REFUND_LICENSE_LOOKUP_FIX_LOG.md  SECURITY.md  WEBHOOK_NULL_EMAIL_FIX_LOG.md  alembic.ini  docker-compose.yml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  release-please-config.json  schema.sql  turbo.json  vercel.json  (+3 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
api/: licenses.py  main.py  stripe_webhook.py  usage.py
code-review/: REVIEW-SUMMARY.md
config/: settings.py
database/: models.py  session.py
docs/: cli-v3-architecture.md  technical-reference.md
migrations/: 004_blast_to_deps_rename.sql  005_add_usage_daily.sql  008_add_lifetime_support.sql  env.py
replimap/: __init__.py  main.py
replimap-backend/: .env.example  pyproject.toml
scripts/: check_stdout_hygiene.py  e2e-commercial-flow.sh  record_cassettes.py
services/: license_service.py  usage_service.py
src/: features.ts  index.ts
staging-tf/: alb.tf  compute.tf  ec2.tf  elasticache.tf  messaging.tf  networking.tf  outputs.tf  providers.tf  rds.tf  s3.tf  security_groups.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
templates/: autoscaling_group.tf.j2  ebs_volume.tf.j2  elasticache_cluster.tf.j2  elasticache_subnet_group.tf.j2  internet_gateway.tf.j2  launch_template.tf.j2  lb.tf.j2  nat_gateway.tf.j2  route_table.tf.j2  sns_topic.tf.j2  sqs_queue.tf.j2  vpc_endpoint.tf.j2
tests/: admin.test.ts  aws-accounts.test.ts  billing.test.ts  conftest.py  constants.test.ts  helpers.ts  stripe-webhook.test.ts  test_async_aws.py  test_async_scanners.py  test_audit_terminal_reporter.py  test_backend_generator.py  test_blast_radius.py  test_browser.py  test_cache.py  test_cache_manager.py  test_centrality_analysis.py  test_cli.py  test_cli_commands.py  test_cli_utils.py  test_compliance.py  test_concurrency.py  test_core_engine.py  test_cost_estimator.py  test_cost_optimization.py  test_credential_security.py  test_deps_analyzers.py  test_deps_disclaimer.py  test_drift_detector.py  test_drift_reporter.py  test_enrichment.py  test_errors.py  test_filters.py  (+61 more)
(+583 files in other folders)
