[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replimap"
version = "0.1.0"
description = "AWS Environment Replication Tool - Clone production to staging in minutes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RepliMap Team"}
]
keywords = [
    "aws",
    "terraform",
    "infrastructure",
    "devops",
    "staging",
    "replication",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "boto3>=1.28.0",
    "networkx>=3.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "boto3-stubs[ec2,s3,rds,sts]>=1.28.0",
]

[project.scripts]
replimap = "replimap.main:cli"

[project.urls]
Homepage = "https://github.com/replimap/replimap"
Documentation = "https://github.com/replimap/replimap#readme"
Repository = "https://github.com/replimap/replimap.git"
Issues = "https://github.com/replimap/replimap/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["replimap*"]

[tool.setuptools.package-data]
replimap = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*", "networkx.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["replimap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
